Add addTag and editTag parts
